2013-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Corrected operator-() for Date and Datetime objects
	to behave more inline with C++ standard

	* inst/include/Rcpp/Date.h: operator-() for Dates now returns a
	double as the date itself is fractional double since epoch

	* inst/unitTests/cpp/dates.cpp: New file with C++ portion of tests
	factored out from R unit test file
	* inst/unitTests/runit.Date.R: Rewritten for use with new C++ tests

2013-04-02 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/generated/DataFrame_generated.h : DateFrame::create
        uses List::create and then feeds to the DataFrame constructor, which
        seems to work better than the previous approach of calling back to the
        data.frame function in R
        * include/Rcpp/DataFrame.h : private function from_list, to help
        the new implementation of DataFrame::create
        * src/api.cpp : impl of DataFrame::from_list

2013-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* debian/control (Build-Depends): Modified for Debian-only rebuilds
	under (rc version of upcoming) R 3.0.0 release
	* debian/changelog: Entry for Debian build 0.10.3-2

2013-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): Re-enable coerce_to_string<>() for real and
	complex types with Poor Man's Versions (TM) of Rf_EncodeReal and
	Rf_EncodeComplex which the Powers That Be disallow from being used

2013-03-27 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/MatrixRow.h : removed unintended printed
	messaged (reported on Rcpp-devel by Michaeal Love)

2013-03-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.3
        * inst/NEWS.Rd: Release 0.10.3
        * inst/include/Rcpp/config.h: Release 0.10.3
        * debian/*: Similarly updated for new release to Debian

2013-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.wstring.R (test.as_vector_wstring): replace